--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         周耘伊
                         <span class="text-primary">Yun-Yi Chou</span>
                     </h1>
-                    <div class="subheading mb-5">
+                    <div class="text-transform: capitalize;subheading mb-5">
                         台北市木柵路一段十七巷一號 Ln. 17, Sec. 1, Rd. Muzha , Taipei City , Taiwan <br /> 
                         (Tel)+886-2-22368225<br /> 
                         <a href="mailto:name@email.com">A111070048@mail.shu.edu.tw</a>
