--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <!-- Google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300&family=Playfair+Display&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;900&family=Playfair+Display&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link href=“css/my_style.css” rel=“stylesheet”> 
+        <link href=“css/my_style.css” rel=“stylesheet”/> 
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -45,7 +45,7 @@
                         周耘伊
                         <span class="text-primary">Yun-Yi Chou</span>
                     </h1>
-                    <div class="text-transform: capitalize;subheading mb-5">
+                    <div class="subheading mb-5">
                         台北市木柵路一段十七巷一號 Ln. 17, Sec. 1, Rd. Muzha , Taipei City , Taiwan <br /> 
                         (Tel)+886-2-22368225<br /> 
                         <a href="mailto:name@email.com">A111070048@mail.shu.edu.tw</a>
