--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;900&family=Playfair+Display&display=swap" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <link href=“css/my_style.css” rel=“stylesheet”/> 
+<!--core theme CSS (inclundes Bootstrap)-->
+<link href ="css/styles.css"rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
