--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;900&family=Playfair+Display&display=swap" rel="stylesheet">
 <!--core theme CSS (inclundes Bootstrap)-->
 <link href ="css/styles.css"rel="stylesheet" />
-<link href=“css/my_style.css” rel=“stylesheet”>
+<link href="css/my_style.css" rel="stylesheet">
     </head>
     <body id="page-top">
         <!-- Navigation-->
