--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">世新大學</h3>
+                            <h3 class="mb-0">世新大學
+                            <a class="expedu_icon" herf="http://ics.wp.shu.edu.tw"><i class="fa-solid fa-house-user"></i></a>
+                            </h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div>是我想要的科系</div>
                 
