--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">新北高中</h3>
+                            <h3 class="mb-0">新北高中
+                            <a class="expedu_icon" herf="https://www.ntsh.ntpc.edu.tw"><i class="fa-solid fa-school"></i></a>
+                            </h3>
                             <div class="subheading mb-3">普通科系</div>
                             <div>多采多姿的高中生活</div>
                             
