--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學
-                            <a class="expedu_icon" herf="http://ics.wp.shu.edu.tw"><i class="fa-solid fa-house-user"></i></a>
+                            <a class="expedu_icon" href="http://ics.wp.shu.edu.tw"><i class="fa-solid fa-house-user"></i></a>
                             </h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
                             <div>是我想要的科系</div>
@@ -117,7 +117,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">新北高中
-                            <a class="expedu_icon" herf="https://www.ntsh.ntpc.edu.tw"><i class="fa-solid fa-school"></i></a>
+                            <a class="expedu_icon" href="https://www.ntsh.ntpc.edu.tw"><i class="fa-solid fa-school"></i></a>
                             </h3>
                             <div class="subheading mb-3">普通科系</div>
                             <div>多采多姿的高中生活</div>
