--- a/index.html
+++ b/index.html
@@ -162,8 +162,15 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">portfolios</h2>
-                    <p> I like watching dramas and chasing stars, mostly in Korea. I also like to learn makeup, improve skills, and invest in myself.</p>
+                    <h2 class="mb-5">Interests</h2>
+                    <p>I usually like to watch movies, or go shopping, and I go to sleep when I am tired, so I always feel that yesterday is just like this.</p>
+                    <p class="mb-0">YOLO</p>
+
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fa-solid fa-film"></i>
+                        <li class="list-inline-item"><i class="fa-solid fa-cart-shopping"></i>
+                        <li class="list-inline-item"><i class="fa-sharp fa-solid fa-moon"></i>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
