--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>I usually like to watch movies, or go shopping, and I go to sleep when I am tired, so I always feel that yesterday is just like this.</p>
+                    <p>I like to use the holidays to watch dramas and chase stars, most of them are Korean ones, because I like it and I can watch and learn Korean, and I also like shopping, which is also a good way to go out for a walk.</p>
                     <p class="mb-0">YOLO</p>
 
                     <ul class="list-inline dev-icons">
