--- a/index.html
+++ b/index.html
@@ -164,12 +164,11 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>I like to use the holidays to watch dramas and chase stars, most of them are Korean ones, because I like it and I can watch and learn Korean, and I also like shopping, which is also a good way to go out for a walk.</p>
-                    <p class="mb-0">YOLO</p>
 
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fa-solid fa-film"></i>
                         <li class="list-inline-item"><i class="fa-solid fa-cart-shopping"></i>
-                        <li class="list-inline-item"><i class="fa-sharp fa-solid fa-moon"></i>
+                        <li class="list-inline-item"><i class="fa-regular fa-video"></i>
                     </ul>
                 </div>
             </section>
@@ -177,45 +176,13 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            <a class="fa-li" href=https://www.osparks.com/member/81169/about/1 target="_blank"><i class="fa-solid fa-user"></i></a> 
+                            數位策展
                         </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                           
                         </li>
                     </ul>
                 </div>
