--- a/index.html
+++ b/index.html
@@ -140,19 +140,19 @@
                     <div class="subheading mb-3">specialties</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-piano"></i></span>
                             鋼琴 Piano
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-book"></i></span>
                             韓文 Korean
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fa-sharp fa-regular fa-circle-video"></i></span>
                             傳技展 Communication Technology Exhibition
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <span class="fa-li"><i class="fa-solid fa-chalkboard"></i></span>
                             資訊傳播概論 Introduction to Information Communication
                         </li>
                     </ul>
