--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="subheading mb-3">specialties</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fa-solid fa-piano"></i></span>
+                            <span class="fa-li"><i class="fa-regular fa-piano"></i></span>
                             鋼琴 Piano
                         </li>
                         <li>
@@ -148,7 +148,7 @@
                             韓文 Korean
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fa-sharp fa-regular fa-circle-video"></i></span>
+                            <span class="fa-li"><i class="fa-regular fa-chalkboard"></i></span>
                             傳技展 Communication Technology Exhibition
                         </li>
                         <li>
