--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             韓文 Korean
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fa-regular fa-chalkboard"></i></span>
+                            <span class="fa-li"><i class="fa-light fa-video"></i></span>
                             傳技展 Communication Technology Exhibition
                         </li>
                         <li>
