--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fa-solid fa-film"></i>
                         <li class="list-inline-item"><i class="fa-solid fa-cart-shopping"></i>
-                        <li class="list-inline-item"><i class="fa-solid fa-circle-video"></i>
+                        <li class="list-inline-item"><i class="fa-solid fa-person"></i>
                     </ul>
                 </div>
             </section>
