--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="subheading mb-3">specialties</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fa-sharp fa-light fa-piano-keyboard"></i></span>
+                            <span class="fa-li"><i class="fa-regular fa-music"></i></span>
                             鋼琴 Piano
                         </li>
                         <li>
