--- a/index.html
+++ b/index.html
@@ -173,24 +173,78 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
+              <!-- Portfolios-->
+              <section class="resume-section" id="Portfolios">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <a class="fa-li" href=https://www.osparks.com/member/81169/about/1 target="_blank"><i class="fa-solid fa-user"></i></a> 
-                            數位策展
-                        </li>
-                           
-                        </li>
-                    </ul>
-                </div>
-            </section>
+                    <div class="accordion" id="publication_accordion">
+      <div class="accordion-item">
+       <div class="accordion-header" id="heading2023">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2023" aria-expanded="true" aria-controls="collapse2023">
+         2023年
+        </button>
+       </div>
+       <div id="collapse2023" class="accordion-collapse collapse show"  aria-labelledby="heading2023" data-bs-parent="#publication_accordion">
+        <div class="accordion-body">
+         <table class="table table-hover">
+          <thead>
+           <tr>
+            <th>出版年</th>
+            <th>作品名稱</th>
+            <th>內容簡述</th>
+           </tr>
+          </thead>
+          <tbody>
+           <tr>
+            <td>2023</td>
+            <td>策展自己</td>
+            <td>在TikiToki網站上策畫我的人生特展</td>
+           </tr>
+                                            <tr>
+            <td>2023</td>
+            <td>饒舌比賽</td>
+            <td>參加政大黑音舉辦的阿芙嘉饒舌比賽</td>
+           </tr>
+          </thead>
+         </table>
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+       </div>
+      </div>
+                        <div class="accordion-item">
+       <div class="accordion-header" id="heading2022">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2022" aria-expanded="false" aria-controls="collapse2022">
+         2022年
+        </button>
+       </div>
+       <div id="collapse2022" class="accordion-collapse collapse"  aria-labelledby="heading2022" data-bs-parent="#publication_accordion">
+        <div class="accordion-body">
+         <table class="table table-hover">
+          <thead>
+           <tr>
+            <th>出版年</th>
+            <th>作品名稱</th>
+            <th>內容簡述</th>
+           </tr>
+          </thead>
+          <tbody>
+                                                <tr>
+                                                    <td>2022</td>
+                                                    <td>人智益盡</td>
+                                                    <td>在Youtube直播</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2022</td>
+                                                    <td>皓皓的小短片</td>
+                                                    <td>透過組員皓皓的演出表演進行拍小短片，吸引瀏覽率</td>
+                                                </tr>
+          </tbody>
+         </table>
+        </div>
+       </div>
+      </div>
+       <!-- Bootstrap core JS-->
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+       <!-- Core theme JS-->
+       <script src="js/scripts.js"></script>
+   </body>
 </html>
