--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
            <tr>
             <td>2023</td>
             <td>策展自己</td>
-            <td>在TikiToki網站上策畫我的人生特展</td>
+            <td>在Osparks展示自己</td>
            </tr>
                                             <tr>
             <td>2023</td>
-            <td>饒舌比賽</td>
-            <td>參加政大黑音舉辦的阿芙嘉饒舌比賽</td>
+            <td>傳技課</td>
+            <td>經營社群廢物羊</td>
            </tr>
           </thead>
          </table>
@@ -227,16 +227,11 @@
            </tr>
           </thead>
           <tbody>
-                                                <tr>
-                                                    <td>2022</td>
-                                                    <td>人智益盡</td>
-                                                    <td>在Youtube直播</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>2022</td>
-                                                    <td>皓皓的小短片</td>
-                                                    <td>透過組員皓皓的演出表演進行拍小短片，吸引瀏覽率</td>
-                                                </tr>
+             <tr>
+              <td>2022</td>
+              <td>甲郎告告</td>
+              <td>傳播概論直播</td>
+             </tr>
           </tbody>
          </table>
         </div>
