--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <tbody>
            <tr>
             <td>2023</td>
-            <td>策展自己</td>
+            <td>＜a href=" https://www.instagram.com/waste_sheep/" target="_blank">策展自己</td></i></a>
             <td>在Osparks展示自己</td>
            </tr>
                                             <tr>
@@ -210,8 +210,8 @@
         </div>
        </div>
       </div>
-                        <div class="accordion-item">
-       <div class="accordion-header" id="heading2022">
+        <div class="accordion-item">
+        <div class="accordion-header" id="heading2022">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2022" aria-expanded="false" aria-controls="collapse2022">
          2022年
         </button>
