--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <tbody>
            <tr>
             <td>2023</td>
-            <td>＜a href=" https://www.instagram.com/waste_sheep/" target="_blank">策展自己</td></i></a>
+            ＜a href=" https://www.instagram.com/waste_sheep/" target="_blank"><td>策展自己</td>
             <td>在Osparks展示自己</td>
            </tr>
                                             <tr>
