--- a/index.html
+++ b/index.html
@@ -197,8 +197,9 @@
           <tbody>
            <tr>
             <td>2023</td>
-            ＜a href=" https://www.instagram.com/waste_sheep/" target="_blank"><td>策展自己</td>
+            <td>策展自己</td>
             <td>在Osparks展示自己</td>
+            <a class="expedu_icon"a href=" https://www.instagram.com/waste_sheep/" target="_blank"></i></a>
            </tr>
                                             <tr>
             <td>2023</td>
