--- a/index.html
+++ b/index.html
@@ -198,12 +198,11 @@
            <tr>
             <td>2023</td>
             <td>策展自己</td>
-            <td>在Osparks展示自己</td>
-            <a class="expedu_icon"a href=" https://www.instagram.com/waste_sheep/" target="_blank"></i></a>
+            <td>在Osparks展示自己</td>  
            </tr>
-                                            <tr>
+           <tr>
             <td>2023</td>
-            <td>傳技課</td>
+            <td><a href="https://www.instagram.com/waste_sheep/">傳技課</a></td>
             <td>經營社群廢物羊</td>
            </tr>
           </thead>
