--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <tbody>
              <tr>
               <td>2022</td>
-              <td>甲郎告告</td>
+              <td><a href="https://www.youtube.com/watch?v=1Ow6EUxeXJM">甲郎告告</a></td>
               <td>傳播概論直播</td>
              </tr>
           </tbody>
