--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
             </section>
             <hr class="m-0" />
               <!-- Portfolios-->
-              <section class="resume-section" id="Portfolios">
+              <section class="resume-section" id="portfolios">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
+                    <div class="accordion" id="publication_accordion"></div>
       <div class="accordion-item">
        <div class="accordion-header" id="heading2023">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2023" aria-expanded="true" aria-controls="collapse2023">
