--- a/portfolios.html
+++ b/portfolios.html
@@ -1,3 +1,23 @@
+<nav class="navbaar navbar-expand-lg navbar-light bg-light">
+    <div class=""container-fluid">
+        <a href="#" class="navbar-brand"></a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+                <a href="#" class="nav-item nav-link active">Home</a>
+                <a href="#" class="nav-item nav-link active">Profile</a>
+                <a href="#" class="nav-item nav-link active">Messages</a>
+                <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+                <a href="#" class="nav-item nav-link">Login</a>
+            </div>
+        </div>
+    </div>
+</nav>
+       </div>
 <!DOCTYPE html>
 <html lang="en">
     <head>
