--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles.educss" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -55,6 +55,7 @@
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="#!"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
@@ -65,11 +66,11 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">為自己努力</h3>
-                            <div class="subheading mb-3">學習韓文</div>
-                            <p>很喜歡韓國文化，學習他們的語言，為自己增加一個外語</p>
+                            <h3 class="mb-0">第一次出現在螢幕上</h3>
+                            <div class="subheading mb-3">概論直播</div>
+                            <p>第一次直播，東西都沒碰過，非常有趣</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2020.07</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022.12</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -81,19 +82,19 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">為自己努力</h3>
+                            <div class="subheading mb-3">學習韓文</div>
+                            <p>很喜歡韓國文化，學習他們的語言，為自己增加一個外語</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020.07</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">快樂的信仰</h3>
                             <div class="subheading mb-3">天主教</div>
                             <p>認識了會一起出來玩的家庭們，每個禮拜都很期待</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2004.06</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">第一次出現在螢幕上</h3>
-                            <div class="subheading mb-3">概論直播</div>
-                            <p>第一次直播，東西都沒碰過，非常有趣</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2022.12</span></div>
                     </div>
                 </div>
             </section>
