--- a/portfolios.html
+++ b/portfolios.html
@@ -160,8 +160,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4>About</h4>
-          <p class="text-body-secondary">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <h4>關於</h4>
+          <p class="text-body-secondary">我是一直都在北市讀書的學生，喜歡追劇、追星，看些帥哥來應付每天快累死又無聊的生活，喜歡排球但是也有點久沒有練習了，快來看看我的生活吧!</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Contact</h4>
