--- a/portfolios.html
+++ b/portfolios.html
@@ -205,7 +205,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">想念的人</text></svg>
+            <img src="assets/img/img.6.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">想念的人</text></svg>
             <div class="card-body">
               <p class="card-text">高一的朋朋，很久才約一次的我們，因為大學了，大家都各奔東西，是蠻想他們的</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -218,7 +218,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">台中遊</text></svg>
+            <img src="assets/img/img.5.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">台中遊</text></svg>
             <div class="card-body">
               <p class="card-text">畢業之後，才有能力一起出遊的高二朋友們，三天兩夜行程太短了，讓人想要再一次的出遊，但要一樣的人喔</p>
               <div class="d-flex justify-content-between align-items-center">
