--- a/portfolios.html
+++ b/portfolios.html
@@ -231,7 +231,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">大學</text></svg>
+            <img src="assets/img/img.7.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">大學</text></svg>
             <div class="card-body">
               <p class="card-text">紀念一下第一次一起出遊</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -245,7 +245,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">西子灣</text></svg>
+            <img src="assets/img/img.1.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">西子灣</text></svg>
             <div class="card-body">
               <p class="card-text">畢業旅行，倒數的日子，一起創造回憶</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -258,7 +258,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">東豐綠色隧道</text></svg>
+            <img src="assets/img/img.8.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">東豐綠色隧道</text></svg>
             <div class="card-body">
               <p class="card-text">在騎腳踏車的時候，覺得很好看就拍下來了</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -271,7 +271,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">白沙灣</text></svg>
+            <img src="assets/img/img.4.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">白沙灣</text></svg>
             <div class="card-body">
               <p class="card-text">雖然天氣不是很好，但海邊配上一對情侶，可能這就是我嚮往的愛情吧</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -298,7 +298,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">自己做蛋糕</text></svg>
+            <img src="assets/img/img.2.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">自己做蛋糕</text></svg>
             <div class="card-body">
               <p class="card-text">很喜歡嘗試自己沒做過的事情，所以跟我同學去做了</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -311,7 +311,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">聽，說愛情展</text></svg>
+            <img src="assets/img/img.3.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">聽，說愛情展</text></svg>
             <div class="card-body">
               <p class="card-text">去愛情展，受教一下，太有共鳴啦</p>
               <div class="d-flex justify-content-between align-items-center">
