--- a/portfolios.html
+++ b/portfolios.html
@@ -285,7 +285,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">聲戀</text></svg>
+            <img src="assets/img/img.9.jpg" class="bd-placeholder-img card-img-top" max-width="100%"max-height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">聲戀</text></svg>
             <div class="card-body">
               <p class="card-text">幫認識的廣電系姐姐的畢製幫忙，看看別人用聲音談戀愛</p>
               <div class="d-flex justify-content-between align-items-center">
